# twitter-lite

./: Cargo.toml  docker-compose.yml
src/: app.rs  main.rs
src/db/: pool.rs
src/models/: tweet.rs  user.rs
src/repositories/: follow_repository.rs  mod.rs  tweet_repository.rs  user_repository.rs
src/routes/: follow.rs  mod.rs  tweets.rs  users.rs
src/services/: follow_service.rs  mod.rs  tweet_service.rs  user_service.rs
